--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tailwinds.init.css">
     <title>2nd Assignment</title>
@@ -19,5 +21,36 @@
 </ul>
 <button class="btn">Subscribe</button>
      </section>
+     <!-- About start -->
+      <section class="about-section">
+<div class="content">
+<h2>About the Podcast</h2>
+<p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+We break down complex topics into digestible insights, explore productivity strategies that actually work,
+and share stories of personal growth from industry leaders.
+</p>
+<p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+
+</div>
+<hr>
+<div class="stats">
+<div class="box">
+<h3>150K+</h3>
+<span>Monthly Listeners</span>
+</div>
+<div class="box">
+<h3>200+</h3>
+<span>Episodes Published</span>
+</div>
+<div class="box">
+<h3>4.9★</h3>
+<span>Average Rating</span>
+</div>
+<div class="box">
+<h3>50+</h3>
+<span>Industry Experts</span>
+</div>
+</div>
+      </section>
 </body>
 </html>
