add meet the host

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- navbar start -->
      <section class="navbar">
 <div class="logo">
-<h3>Tech<span>Wava</span></h3>
+<h3>TECH<span>WAVA</span></h3>
 </div>
 <ul class="menu" id="menu">
 <li>About</li>
@@ -52,5 +52,55 @@ and share stories of personal growth from industry leaders.
 </div>
 </div>
       </section>
+      <!-- Featured Episodes start -->
+       <section class="episodes">
+<h2>Featured Episodes</h2>
+<div class="episodes-card">
+<div class="card">
+<div class="video">
+<iframe  src="https://www.youtube.com/embed/Ag3zMEJtHAA?si=ikZBS3o0fv5TK9sq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<h3>The Future of AI in Everyday Life</h3>
+<p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+<span class="time">42 min</span>
+</div>
+<div class="card">
+<div class="video">
+<iframe  src="https://www.youtube.com/embed/K9XkpsNJ2RM?si=bLoCdHxwkn4uj7Mf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<h3>Building Better Habits for Remote Work</h3>
+<p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+<span class="time">35 min</span>
+</div>
+<div class="card">
+<div class="video">
+<iframe src="https://www.youtube.com/embed/oV-M6gZL4yQ?si=Omc86Sy6R06Ww15L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<h3>Career Growth in Tech: A Roadmap</h3>
+<p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+<span class="time">51 min</span>
+</div>
+</div>
+<!-- meet host -->
+
+<div class="host-section">
+<h2 class="text-center text-[48px]">Meet The Host</h2>
+<div class="host-card">
+<div class="host-img">
+<img src="./assets/host.png" alt="host-image">
+</div>
+<div class="host-content">
+<h3>ALEX Kumer</h3>
+<P>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</P>
+<div class="socials">
+<img src="./assets/linkedin.png" alt="linkedin">
+<img src="./assets/x.png" alt="">
+<img src="./assets/youtube.png" alt="youtube">
+<img src="./assets/instagram.png" alt="">
+</div>
+</div> 
+</div>
+</div>
+</section>
 </body>
 </html>
