--- a/index.html
+++ b/index.html
@@ -52,6 +52,41 @@ and share stories of personal growth from industry leaders.
 </div>
 </div>
       </section>
+<!-- why choose teachwava -->
+<section class="why-section">
+    <h2>Why Choose TechWave</h2>
+<div class="why-grid">
+<div class="why-card big">
+<img class="icon" src="./assets/headphone.png" alt="">
+<h3>Premium Audio Quality</h3>
+<p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+</div>
+<div class="why-card">
+<img  class="icon" src="./assets/device.png" alt="">
+<h3>Mobile Friendly</h3>
+<p>Listen on the go with seamless mobile experience and offline downloads.</p>
+</div>
+<div class="why-card">
+<img  class="icon" src="./assets/location.png" alt="">
+<h3>Global Community</h3>
+<p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+</div>
+<div class="why-card">
+<img  class="icon" src="./assets/device.png" alt="">
+<h3>Exclusive Interviews</h3>
+<p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+</div>
+<div class="why-card">
+<img  class="icon" src="./assets/resource.png" alt="">
+<h3>Rich Resources</h3>
+<p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+</div>
+
+</div>
+</section>
+
+
+
       <!-- Featured Episodes start -->
        <section class="episodes">
 <h2>Featured Episodes</h2>
@@ -102,5 +137,25 @@ and share stories of personal growth from industry leaders.
 </div>
 </div>
 </section>
+<!-- footer -->
+<footer class="footer">
+<div class="footer-overlay">
+    <h1 class="logo">Tech <span>Wava</span></h1>
+    <div class="img"> 
+<img src="./assets/spotify.png" alt="">
+<img src="./assets/twitter.png" alt="">
+<img src="./assets/apple-podcast.png" alt="">
+<img src="./assets/youtube.png" alt="">
+
+    </div>
+
+<p class="copyright" >
+                © 2026 TechWave Podcast. All rights reserved.
+ 
+</p>
+</div>
+
+</footer>
+
 </body>
 </html>
