add banner section

--- a/index.html
+++ b/index.html
@@ -1,161 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="tailwinds.init.css">
     <title>2nd Assignment</title>
 </head>
+
 <body>
     <!-- navbar start -->
-     <section class="navbar">
-<div class="logo">
-<h3>TECH<span>WAVA</span></h3>
-</div>
-<ul class="menu" id="menu">
-<li>About</li>
-<li>Episodes</li>
-<li>Host</li>
-</ul>
-<button class="btn">Subscribe</button>
-     </section>
-     <!-- About start -->
-      <section class="about-section">
-<div class="content">
-<h2>About the Podcast</h2>
-<p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
-We break down complex topics into digestible insights, explore productivity strategies that actually work,
-and share stories of personal growth from industry leaders.
-</p>
-<p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+    <section class="navbar">
+        <div class="logo">
+            <h3>TECH<span>WAVA</span></h3>
+        </div>
+        <ul class="menu" id="menu">
+            <li>About</li>
+            <li>Episodes</li>
+            <li>Host</li>
+        </ul>
+        <button class="btn">Subscribe</button>
+    </section>
+    <!-- banner section -->
+    <section class="banner">
+        <div class="wava left-wava"></div>
+        <div class="wava right-wava"></div>
+        <div class="container">
+            <div class="circle-container">
+                <div class="main-circle">
+                    <img src="./assets/microphone.png" alt="">
+                    <span class="badge">New</span>
+                </div>
+            </div>
+            <div class="text-content">
+                <h1>TechWava</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-spotify">
+                    Listen on Spotify
+                </button>
+                <button class="btn btn-subscribe">Subscribe</button>
+            </div>
+        </div>
+    </section>
 
-</div>
-<hr>
-<div class="stats">
-<div class="box">
-<h3>150K+</h3>
-<span>Monthly Listeners</span>
-</div>
-<div class="box">
-<h3>200+</h3>
-<span>Episodes Published</span>
-</div>
-<div class="box">
-<h3>4.9★</h3>
-<span>Average Rating</span>
-</div>
-<div class="box">
-<h3>50+</h3>
-<span>Industry Experts</span>
-</div>
-</div>
-      </section>
-<!-- why choose teachwava -->
-<section class="why-section">
-    <h2>Why Choose TechWave</h2>
-<div class="why-grid">
-<div class="why-card big">
-<img class="icon" src="./assets/headphone.png" alt="">
-<h3>Premium Audio Quality</h3>
-<p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
-</div>
-<div class="why-card">
-<img  class="icon" src="./assets/device.png" alt="">
-<h3>Mobile Friendly</h3>
-<p>Listen on the go with seamless mobile experience and offline downloads.</p>
-</div>
-<div class="why-card">
-<img  class="icon" src="./assets/location.png" alt="">
-<h3>Global Community</h3>
-<p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-</div>
-<div class="why-card">
-<img  class="icon" src="./assets/device.png" alt="">
-<h3>Exclusive Interviews</h3>
-<p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
-</div>
-<div class="why-card">
-<img  class="icon" src="./assets/resource.png" alt="">
-<h3>Rich Resources</h3>
-<p>Access show notes, transcripts, and additional learning materials for every episode.</p>
-</div>
+    <!-- About start -->
+    <section class="about-section">
+        <div class="about">
+            <h2>About the Podcast</h2>
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                We break down complex topics into digestible insights, explore productivity strategies that actually
+                work,
+                and share stories of personal growth from industry leaders.
+            </p>
+            <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
 
-</div>
-</section>
+        </div>
+        <hr>
+        <div class="stats">
+            <div class="box">
+                <h3>150K+</h3>
+                <span>Monthly Listeners</span>
+            </div>
+            <div class="box">
+                <h3>200+</h3>
+                <span>Episodes Published</span>
+            </div>
+            <div class="box">
+                <h3>4.9★</h3>
+                <span>Average Rating</span>
+            </div>
+            <div class="box">
+                <h3>50+</h3>
+                <span>Industry Experts</span>
+            </div>
+        </div>
+    </section>
+    <!-- why choose teachwava -->
+    <section class="why-section">
+        <h2>Why Choose TechWave</h2>
+        <div class="why-grid">
+            <div class="why-card big">
+                <img class="icon" src="./assets/headphone.png" alt="">
+                <h3>Premium Audio Quality</h3>
+                <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                    engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+            </div>
+            <div class="why-card">
+                <img class="icon" src="./assets/device.png" alt="">
+                <h3>Mobile Friendly</h3>
+                <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+            </div>
+            <div class="why-card">
+                <img class="icon" src="./assets/location.png" alt="">
+                <h3>Global Community</h3>
+                <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+            </div>
+            <div class="why-card">
+                <img class="icon" src="./assets/device.png" alt="">
+                <h3>Exclusive Interviews</h3>
+                <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
+                    exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
+                    success strategies.</p>
+            </div>
+            <div class="why-card">
+                <img class="icon" src="./assets/resource.png" alt="">
+                <h3>Rich Resources</h3>
+                <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+            </div>
+
+        </div>
+    </section>
 
 
 
-      <!-- Featured Episodes start -->
-       <section class="episodes">
-<h2>Featured Episodes</h2>
-<div class="episodes-card">
-<div class="card">
-<div class="video">
-<iframe  src="https://www.youtube.com/embed/Ag3zMEJtHAA?si=ikZBS3o0fv5TK9sq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-<h3>The Future of AI in Everyday Life</h3>
-<p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
-<span class="time">42 min</span>
-</div>
-<div class="card">
-<div class="video">
-<iframe  src="https://www.youtube.com/embed/K9XkpsNJ2RM?si=bLoCdHxwkn4uj7Mf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-<h3>Building Better Habits for Remote Work</h3>
-<p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
-<span class="time">35 min</span>
-</div>
-<div class="card">
-<div class="video">
-<iframe src="https://www.youtube.com/embed/oV-M6gZL4yQ?si=Omc86Sy6R06Ww15L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
-<h3>Career Growth in Tech: A Roadmap</h3>
-<p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-<span class="time">51 min</span>
-</div>
-</div>
-<!-- meet host -->
+    <!-- Featured Episodes start -->
+    <section class="episodes">
+        <h2>Featured Episodes</h2>
+        <div class="episodes-card">
+            <div class="card">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/Ag3zMEJtHAA?si=ikZBS3o0fv5TK9sq"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <h3>The Future of AI in Everyday Life</h3>
+                <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the
+                    next decade.</p>
+                <span class="time">42 min</span>
+            </div>
+            <div class="card">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/K9XkpsNJ2RM?si=bLoCdHxwkn4uj7Mf"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <h3>Building Better Habits for Remote Work</h3>
+                <p>Practical strategies for staying productive and maintaining work-life balance in a remote
+                    environment.</p>
+                <span class="time">35 min</span>
+            </div>
+            <div class="card">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/oV-M6gZL4yQ?si=Omc86Sy6R06Ww15L"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <h3>Career Growth in Tech: A Roadmap</h3>
+                <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                <span class="time">51 min</span>
+            </div>
+        </div>
+        <!-- meet host -->
 
-<div class="host-section">
-<h2 class="text-center text-[48px]">Meet The Host</h2>
-<div class="host-card">
-<div class="host-img">
-<img src="./assets/host.png" alt="host-image">
-</div>
-<div class="host-content">
-<h3>ALEX Kumer</h3>
-<P>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</P>
-<div class="socials">
-<img src="./assets/linkedin.png" alt="linkedin">
-<img src="./assets/x.png" alt="">
-<img src="./assets/youtube.png" alt="youtube">
-<img src="./assets/instagram.png" alt="">
-</div>
-</div> 
-</div>
-</div>
-</section>
-<!-- footer -->
-<footer class="footer">
-<div class="footer-overlay">
-    <h1 class="logo">Tech <span>Wava</span></h1>
-    <div class="img"> 
-<img src="./assets/spotify.png" alt="">
-<img src="./assets/twitter.png" alt="">
-<img src="./assets/apple-podcast.png" alt="">
-<img src="./assets/youtube.png" alt="">
+        <div class="host-section">
+            <h2 class="text-center text-[48px]">Meet The Host</h2>
+            <div class="host-card">
+                <div class="host-img">
+                    <img src="./assets/host.png" alt="host-image">
+                </div>
+                <div class="host-content">
+                    <h3>ALEX Kumer</h3>
+                    <P>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry
+                        for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex
+                        shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+                    </P>
+                    <div class="socials">
+                        <img src="./assets/linkedin.png" alt="linkedin">
+                        <img src="./assets/x.png" alt="">
+                        <img src="./assets/youtube.png" alt="youtube">
+                        <img src="./assets/instagram.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="footer-overlay">
+            <h1 class="logo">Tech <span>Wava</span></h1>
+            <div class="img">
+                <img src="./assets/spotify.png" alt="">
+                <img src="./assets/twitter.png" alt="">
+                <img src="./assets/apple-podcast.png" alt="">
+                <img src="./assets/youtube.png" alt="">
 
-    </div>
+            </div>
 
-<p class="copyright" >
+            <p class="copyright">
                 © 2026 TechWave Podcast. All rights reserved.
- 
-</p>
-</div>
 
-</footer>
+            </p>
+        </div>
+
+    </footer>
 
 </body>
+
 </html>
