--- a/index.html
+++ b/index.html
@@ -80,42 +80,42 @@
         </div>
     </section>
     <!-- why choose teachwava -->
-    <section class="why-section">
-        <h2>Why Choose TechWave</h2>
-        <div class="why-grid">
-            <div class="why-card big">
-                <img class="icon" src="./assets/headphone.png" alt="">
-                <h3>Premium Audio Quality</h3>
-                <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                    engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
-            </div>
-            <div class="why-card">
-                <img class="icon" src="./assets/device.png" alt="">
-                <h3>Mobile Friendly</h3>
-                <p>Listen on the go with seamless mobile experience and offline downloads.</p>
-            </div>
-            <div class="why-card">
-                <img class="icon" src="./assets/location.png" alt="">
-                <h3>Global Community</h3>
-                <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-            </div>
-            <div class="why-card">
-                <img class="icon" src="./assets/device.png" alt="">
-                <h3>Exclusive Interviews</h3>
-                <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
-                    exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and
-                    success strategies.</p>
-            </div>
-            <div class="why-card">
-                <img class="icon" src="./assets/resource.png" alt="">
-                <h3>Rich Resources</h3>
-                <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
-            </div>
-
-        </div>
-    </section>
-
-
+<section class="features-section">
+<h2 class="title">Why Choose TechWava</h2>
+<div class="bento-grid">
+<div class="car  permium-audio">
+<img class="gradient-icon" src="./assets/headphone.png" alt="">
+<h3>Premium Audio Quality</h3>
+<p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+</div>
+<div class="car mobile-friendly">
+<img class="gradient-icon"  src="./assets/device.png" alt="">
+<div class="card-text">
+    <h3>Mobile Friendly</h3>
+<p>Listen on the go with seamless mobile experience and offline downloads.</p>
+</div>
+</div>
+<div class="car global-community">
+<img  class="gradient-icon" src="./assets/location.png" alt="">
+<div class="card-text">
+<h3>Global Community</h3>
+<p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+</div>
+</div>
+<div class="car exclusive-interviews">
+<img class="gradient-icon"   src="./assets/resource.png" alt="">
+<div class="card-text">
+<h3>Exclusive Interviews</h3>
+<p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+</div>
+</div>
+<div class="car rich-resources">
+<img class="gradient-icon"  src="./assets/resource.png" alt="">
+<h3>Rich Resources</h3>
+<p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+</div>
+</div>
+</section>
 
     <!-- Featured Episodes start -->
     <section class="episodes">
