--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tailwinds.init.css">
     <title>2nd Assignment</title>
 </head>
 
-<body>
+<body class="open-sans">
     <!-- navbar start -->
     <section class="navbar">
         <div class="logo">
@@ -21,7 +25,7 @@
             <li>Episodes</li>
             <li>Host</li>
         </ul>
-        <button class="btn">Subscribe</button>
+        <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
     </section>
     <!-- banner section -->
     <section class="banner">
@@ -40,9 +44,9 @@
             </div>
             <div class="btn-group">
                 <button class="btn btn-spotify">
-                    Listen on Spotify
+                   <i class="fa-brands fa-spotify"></i>  Listen on Spotify
                 </button>
-                <button class="btn btn-subscribe">Subscribe</button>
+                <button class="btn btn-subscribe"><i class="fa-regular fa-envelope-open"></i> Subscribe</button>
             </div>
         </div>
     </section>
@@ -131,7 +135,7 @@
                 <h3>The Future of AI in Everyday Life</h3>
                 <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the
                     next decade.</p>
-                <span class="time">42 min</span>
+                <span class="time"> <i class="fa-solid fa-clock"></i>  42 min</span>
             </div>
             <div class="card">
                 <div class="video">
@@ -143,7 +147,7 @@
                 <h3>Building Better Habits for Remote Work</h3>
                 <p>Practical strategies for staying productive and maintaining work-life balance in a remote
                     environment.</p>
-                <span class="time">35 min</span>
+                <span class="time"><i class="fa-solid fa-clock"></i>  35 min</span>
             </div>
             <div class="card">
                 <div class="video">
@@ -154,7 +158,7 @@
                 </div>
                 <h3>Career Growth in Tech: A Roadmap</h3>
                 <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-                <span class="time">51 min</span>
+                <span class="time"><i class="fa-solid fa-clock"></i> 51 min</span>
             </div>
         </div>
         <!-- meet host -->
