--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li>Host</li>
         </ul>
         <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+        <div class="humburger" id="humburger">
+<i class="fa-solid fa-bars"></i>
+        </div>
     </section>
     <!-- banner section -->
     <section class="banner">
